fix(gameview): adjust screen spacings in gameview

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -743,6 +743,7 @@ iframe{
     .game-name span {
         font-size: 16px;
         margin-left: 16px;
+        margin-top: 0;
     }
 
     .btn-cassino {
